Fix input font for hyprlock

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -76,6 +76,7 @@ input-field {
   outer_color = $accent
   inner_color = $surface0
   font_color = $text
+  font_family = $font
   rounding = 20
   fade_on_empty = false
   placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
