--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -53,7 +53,7 @@ $menu = wofi --conf ~/.config/wofi/config/config --style ~/.config/wofi/src/moch
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = /usr/libexec/polkit-gnome-authentication-agent-1 & hyprpaper & waybar & swaync & nm-applet
+exec-once = /usr/libexec/polkit-gnome-authentication-agent-1 & hyprpaper & swaync & waybar & nm-applet # & hyprpanel
 
 
 #############################
@@ -167,7 +167,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    gesture = 3, horizontal, workspace 
 }
 
 # Example per-device config
